--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
